dmg indicator cfg (menu)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1889 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -40,7 +40,7 @@ menuitem "Select player skin.."          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Select weapon.."        "showmenu weapons"
 menuitem "Select crosshair.."	  "showmenu Crosshairs"
 menuitem "" ""
-menuitem "First-run settings.."                                            [ showmenu "quick setup" ]
+menuitem "QUICK setup.."                                            [ showmenu "QUICK setup" ]
 menuitem "Keyboard/mouse controls.."                                "showmenu controls"
 menuitem "Video settings.."                                         "showmenu video"
 menuitem "Sound settings.."                                         "showmenu sound"
@@ -51,7 +51,7 @@ menuitem "Delete and reset all settings.."                          [ showmenu "
 menuitem ""
 menuitem "		 [ OK ] 		" [ team (at [CLA RVSF] $newteam) ]
 
-newmenu "quick setup"
+newmenu "QUICK setup"
 
 menuitemtextinput "Nickname:" 		"" "name $arg1"
 menuitemtextinput "Resolution (Width):  " "$scr_w" "scr_w $arg1"
@@ -269,6 +269,7 @@ menuitemcheckbox "Show icons: " "(= $hidehudequipment 0)" "hidehudequipment (= $
 menuitemcheckbox "Show console: " "(= $hideconsole 0)" "hideconsole (= $arg1 0)"
 menuitemcheckbox "Show spectate info: " "(= $hidespecthud 0)" "hidespecthud (= $arg1 0)"
 menuitemcheckbox "Show quick messages: " "(= $hidehudmsgs 0)" "hidehudmsgs (= $arg1 0)"
+menuitemcheckbox "Show damage indicator: " "(= $hidedamageindicator 0)" "hidedamageindicator (= $arg1 0)"
 menuitemcheckbox "Show crosshair team-sign: " "$crosshairteamsign" "crosshairteamsign $arg1"
 menuitem "Select crosshair..				"	  "showmenu Crosshairs"
 
