--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -109,14 +109,14 @@ bind F1 "vote 1"
 bind F2 "vote 2"
 bind F3 ""
 bind F4 ""
-bind F5 "toggleocull"
+bind F5 "if $editing [ toggleocull ]"
 bind F6 "if $editing [ showmip ] [ if (= $followmode 0) [ followmode 1 ] [ followmode 0 ] ]"
 bind F7 "spectate"
 bind F8 "followplayer"
 bind F9 ""
 bind F10 "getdemo"
 bind F11 "toggleconsole"
-bind F12 [ screenshot; sleep 3 [ echo "screenshot created" ] ]
+bind F12 [ screenshot; sleep 3 [ echo "Screenshot created." ] ]
 bind F13 ""
 bind F14 ""
 bind F15 ""
@@ -140,3 +140,5 @@ bind PRINT ""
 bind SYSREQ ""
 bind BREAK ""
 bind MENU ""
+
+echo "All binds have been reset to default values."
