Changed scrolling with X, Z or Q options to only be allowed in editmode, so that error is not given if accidentally used in game mode.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1901 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -101,9 +101,9 @@ alias tosok [ votemap 11 $arg1 ]
 alias modifier 0
 alias domodifier [ alias modifier $arg1; onrelease [ alias modifier 0 ] ]
 
-bind Q "domodifier 1"
-bind Z "domodifier 2"
-bind X "domodifier 3"
+bind Q [ if $editing [ domodifier 1 ] ]
+bind Z [ if $editing [ domodifier 2 ] ]
+bind X [ if $editing [ domodifier 3 ] ]
 
 alias universaldelta [
   if $editing [ alias s "edit" ] [ 
