--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -68,16 +68,16 @@ bind M ""
 bind N ""
 bind O "editheight 2 -1"
 bind P "editheight 2 1"
-bind Q "domodifier 1"
+bind Q [ if $editing [ domodifier 1 ] ]
 bind R "reload"
 bind S "backward"
 bind T "saycommand"
 bind U "undo"
 bind V [ if $editing [ paste ] [ showmenu voicecom ] ]
 bind W "forward"
-bind X "domodifier 3"
+bind X [ if $editing [ domodifier 3 ] ]
 bind Y "saycommand %"
-bind Z "domodifier 2"
+bind Z [ if $editing [ domodifier 2 ] ]
 bind DELETE "edittex 0 -1"
 bind KP0 "weapon 4 1"
 bind KP1 ""
