Fixed quick start menu not appearing on first run.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1903 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/firstrun.cfg
+++ b/ac/config/firstrun.cfg
@@ -5,5 +5,5 @@ alias welcome [
     fade 0
     music "pingpong/03-pp-kamikadze.ogg"
     sleep 60000 fade 1
-    showmenu "quick setup"
+    showmenu "QUICK setup"
 ]
