"modeacronyms" added into settings menu.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1904 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -263,6 +263,7 @@ menuitemcheckbox "Bullet near-miss: " "$bulletairsound" "bulletairsound $arg1"
 newmenu game
 
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
+menuitemcheckbox "Show modes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [normal "colored vests" "full color"] "teamdisplaymode $arg1"
 
