Moved all binds from defaults into the keybind menu.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1905 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -1,5 +1,5 @@
-// these default settings get executed whenever "saved.cfg" is not available
-// do not modify anything below, instead change settings in game, or add to autoexec.cfg
+// These default settings get executed whenever "saved.cfg" is not available.
+// Do not modify anything below, instead change settings in game, or add to autoexec.cfg
 
 name "unarmed"     // change!
 
@@ -10,26 +10,10 @@ autoreload 1	   // reload the guns automatically
 
 alias maxmusicvol 120 // set higher if you want (max 255)
 
-// example WASD
-
-bind W forward
-bind A left
-bind S backward
-bind D right
-
-bind B "showmenu weapons"
-
 alias primary [ weapon (currentprimary) ]
 alias secondary [ weapon 1 ]
 alias melee [ weapon 0 ]
 alias grenades [ weapon 6 ]
-
-bind 1 primary
-bind 2 secondary
-bind 3 grenades
-bind 4 melee
-bind R reload
-bind G [ if $editing [ solid 0 ] [ quicknadethrow ] ]
 
 //for alternative weapon binding (more economic) see the end of this file
 
@@ -73,7 +57,6 @@ alias zoom [
 ]
 
 //bind MOUSE2 [ zoom 1; onrelease [ zoom 0 ] ]
-bind MOUSE2 [ if $editing [ showmenu editing ] [ altaction ] ]
 
 // alternative zoom toggle
 //alias ztoggle 0
@@ -101,19 +84,12 @@ alias tosok [ votemap 11 $arg1 ]
 alias modifier 0
 alias domodifier [ alias modifier $arg1; onrelease [ alias modifier 0 ] ]
 
-bind Q [ if $editing [ domodifier 1 ] ]
-bind Z [ if $editing [ domodifier 2 ] ]
-bind X [ if $editing [ domodifier 3 ] ]
-
 alias universaldelta [
   if $editing [ alias s "edit" ] [ 
     if (alive) [ alias s "game" ] [ alias s "spect" ]
   ]
   (concatword delta _ $s _ $modifier)
 ]
-
-bind MOUSE4 "universaldelta  1"
-bind MOUSE5 "universaldelta -1"
 
 alias delta_edit_0 [ editheight $flrceil $arg1 ]
 alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]
