--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -1,16 +1,16 @@
 // do not modify, use "bind" in autoexec.cfg instead
 
 keymap -1 MOUSE1 "attack"
-keymap -3 MOUSE2 "jump"
+keymap -3 MOUSE2 [ if $editing [ showmenu editing ] [ altaction ] ]
 keymap -2 MOUSE3 "weapon"
-keymap -4 MOUSE4 ""
-keymap -5 MOUSE5 ""
+keymap -4 MOUSE4 "universaldelta  1"
+keymap -5 MOUSE5 "universaldelta -1"
 keymap 8 BACKSPACE [ if $editing [ delent ] [ dropflag ] ]
 keymap 9 TAB "showscores"
 keymap 12 CLEAR ""
 keymap 13 RETURN ""
 keymap 19 PAUSE ""
-keymap 27 ESCAPE "quit"
+keymap 27 ESCAPE "showmenu main"
 keymap 32 SPACE "jump"
 keymap 33 EXCLAIM ""
 keymap 34 QUOTEDBL ""
@@ -27,10 +27,10 @@ keymap 45 MINUS ""
 keymap 46 PERIOD "equalize 2"
 keymap 47 SLASH "saycommand /"
 keymap 48 0 "weapon 0 1 2"
-keymap 49 1 "weapon 1 2 4"
-keymap 50 2 "weapon 2 1 4"
-keymap 51 3 "weapon 3 4 2"
-keymap 52 4 "weapon 4 3 2"
+keymap 49 1 "primary"
+keymap 50 2 "secondary"
+keymap 51 3 "grenades"
+keymap 52 4 "melee"
 keymap 53 5 ""
 keymap 54 6 ""
 keymap 55 7 ""
@@ -49,13 +49,13 @@ keymap 93 RIGHTBRACKET "editheight 0 1"
 keymap 94 CARET ""
 keymap 95 UNDERSCORE ""
 keymap 96 BACKQUOTE "saycommand /"
-keymap 97 A ""
-keymap 98 B ""
+keymap 97 A "left"
+keymap 98 B "showmenu weapons"
 keymap 99 C "copy"
-keymap 100 D ""
+keymap 100 D "right"
 keymap 101 E "edittoggle"
 keymap 102 F "solid 1"
-keymap 103 G "solid 0"
+keymap 103 G [ if $editing [ solid 0 ] [ quicknadethrow ] ]
 keymap 104 H "heightfield 0"
 keymap 105 I "heightfield 2"
 keymap 106 J ""
@@ -65,16 +65,16 @@ keymap 109 M ""
 keymap 110 N ""
 keymap 111 O "editheight 2 -1"
 keymap 112 P "editheight 2 1"
-keymap 113 Q ""
-keymap 114 R "recalc"
-keymap 115 S "say :)"
+keymap 113 Q [ if $editing [ domodifier 1 ] ]
+keymap 114 R "reload"
+keymap 115 S "backward"
 keymap 116 T "saycommand"
 keymap 117 U "undo"
 keymap 118 V [ if $editing [ paste ] [ showmenu voicecom ] ]
-keymap 119 W ""
-keymap 120 X "delent"
+keymap 119 W "forward"
+keymap 120 X [ if $editing [ domodifier 3 ] ]
 keymap 121 Y "saycommand %"
-keymap 122 Z ""
+keymap 122 Z [ if $editing [ domodifier 2 ] ]
 keymap 127 DELETE "edittex 0 -1"
 keymap 256 KP0 "weapon 4 1"
 keymap 257 KP1 ""
@@ -106,7 +106,7 @@ keymap 282 F1 "vote 1"
 keymap 283 F2 "vote 2"
 keymap 284 F3 ""
 keymap 285 F4 ""
-keymap 286 F5 "toggleocull"
+keymap 286 F5 "if $editing [ toggleocull ]"
 keymap 287 F6 "if $editing [ showmip ] [ if (= $followmode 0) [ followmode 1 ] [ followmode 0 ] ]"
 keymap 288 F7 "spectate"
 keymap 289 F8 "followplayer"
