--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -29,7 +29,7 @@ bind COMMA "equalize 0"
 bind MINUS ""
 bind PERIOD "equalize 2"
 bind SLASH "saycommand /"
-bind 0 "weapon 0 1 2"
+bind 0 ""
 bind 1 "primary"
 bind 2 "secondary"
 bind 3 "grenades"
