--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -47,7 +47,7 @@ menuitem "Sound settings.."                                         "showmenu so
 menuitem "Game settings.."                                          "showmenu game"
 menuitem "Head-Up display settings.."                               "showmenu HUD"
 menuitem "" ""
-menuitem "Delete and reset all settings.."                          [ showmenu "Are you sure you want to delete/reset ALL settings?" ]
+menuitem "Reset all settings..."                          [ showmenu "Reset ALL settings?" ]
 menuitem ""
 menuitem "		 [ OK ] 		" [ team (at [CLA RVSF] $newteam) ]
 
@@ -162,10 +162,10 @@ alias new_sound_quality [
 ]
 
 
-newmenu "Are you sure you want to delete/reset ALL settings?"
+newmenu "Reset ALL settings?"
 
-menuitem "Yes, reset and quit now!" "resetcfg 1; quit"
-menuitem "No, go back!" "showmenu settings"
+menuitem "  Reset ALL settings and restart AC..." "resetcfg 1; quit"
+menuitem "		Go back!		" "showmenu settings"
 
 newmenu controls
 
@@ -195,14 +195,14 @@ menuitem ""
 menuitemcheckbox "Invert mouse: " "$invmouse" "invmouse $arg1"
 menuitemslider "Mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
 menuitem ""
-menuitem "Reset ALL binds to defaults?" [ showmenu "Are you sure?" ]
+menuitem "		   [ Reset binds to defaults ]  		" [ showmenu "Are you sure you want to reset binds?" ]
 
 alias resetbinds "exec config/resetbinds.cfg"
 
-newmenu "Are you sure?"
+newmenu "Are you sure you want to reset binds?"
 
-menuitem "Yes, please reset all my binds to defaults" "resetbinds"
-menuitem "No! Take me back!" "showmenu controls"
+menuitem "	 Yes, reset all binds to defaults	" "resetbinds"
+menuitem "		       No   		" "showmenu controls"
 
 newmenu video
 
