demo stuff, script contexts
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1909 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scontext.cfg
+++ b/ac/config/scontext.cfg
@@ -1,17 +1,22 @@
-// define script contexts to allow certain commands 
-// in (untrusted) map configuration files
+// define script security contexts to restrict commands to certain contexts
 // do NOT modify
 
-scriptcontext 1 alias
-scriptcontext 1 loadsky
-scriptcontext 1 mapmodelreset
-scriptcontext 1 mapmodel
-scriptcontext 1 texturereset
-scriptcontext 1 texture
-scriptcontext 1 fog
-scriptcontext 1 fogcolour
-scriptcontext 1 mapsound
-scriptcontext 1 watercolour
+// supported contexts
+alias context_core 0    // hardcoded scripts
+alias context_cfg 1     // known scripts
+alias context_prompt 2  // command propmpt
+alias context_mapcfg 3  // map configs, we don't trust them
+
+// set allowed commands for the map config context
+alias mapcfgidents [ alias loadsky mapmodelreset mapmodel texturereset texture fog fogcolour mapsound watercolour ]
+loop i (listlen $mapcfgidents) [
+    scriptcontext $context_mapcfg (at $mapcfgidents $i)
+]
+
+// isolate the map config context
+// this disables access from this context to identifiers located in other contexts
+// also it removes all aliases created in this context once the running context changes
+isolatecontext $context_mapcfg 
 
 // secure this configuration for the rest of the game
 sealcontexts 
