--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -108,8 +108,8 @@ keymap 284 F3 ""
 keymap 285 F4 ""
 keymap 286 F5 "if $editing [ toggleocull ]"
 keymap 287 F6 "if $editing [ showmip ] [ if (= $followmode 0) [ followmode 1 ] [ followmode 0 ] ]"
-keymap 288 F7 "spectate"
-keymap 289 F8 "followplayer"
+keymap 288 F7 ""
+keymap 289 F8 ""
 keymap 290 F9 ""
 keymap 291 F10 "getdemo"
 keymap 292 F11 "toggleconsole"
