--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -111,8 +111,8 @@ bind F3 ""
 bind F4 ""
 bind F5 "if $editing [ toggleocull ]"
 bind F6 "if $editing [ showmip ] [ if (= $followmode 0) [ followmode 1 ] [ followmode 0 ] ]"
-bind F7 "spectate"
-bind F8 "followplayer"
+bind F7 ""
+bind F8 ""
 bind F9 ""
 bind F10 "getdemo"
 bind F11 "toggleconsole"
