--- a/ac/config/scontext.cfg
+++ b/ac/config/scontext.cfg
@@ -4,7 +4,7 @@
 // supported contexts
 alias context_core 0    // hardcoded scripts
 alias context_cfg 1     // known scripts
-alias context_prompt 2  // command propmpt
+alias context_prompt 2  // command prompt
 alias context_mapcfg 3  // map configs, we don't trust them
 
 // set allowed commands for the map config context
