--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -107,7 +107,7 @@ keymap 283 F2 "vote 2"
 keymap 284 F3 ""
 keymap 285 F4 ""
 keymap 286 F5 "if $editing [ toggleocull ]"
-keymap 287 F6 "if $editing [ showmip ] [ if (= $followmode 0) [ followmode 1 ] [ followmode 0 ] ]"
+keymap 287 F6 "if $editing [ showmip ]"
 keymap 288 F7 ""
 keymap 289 F8 ""
 keymap 290 F9 ""
