--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -110,7 +110,7 @@ bind F2 "vote 2"
 bind F3 ""
 bind F4 ""
 bind F5 "if $editing [ toggleocull ]"
-bind F6 "if $editing [ showmip ] [ if (= $followmode 0) [ followmode 1 ] [ followmode 0 ] ]"
+bind F6 "if $editing [ showmip ]"
 bind F7 ""
 bind F8 ""
 bind F9 ""
