--- a/ac/packages/maps/ac_snow.cfg
+++ b/ac/packages/maps/ac_snow.cfg
@@ -10,7 +10,7 @@
 mapmodelreset // start @ zero
 
 mapmodel 0 0 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
-//                                     models that can´t be clipped properly otherwise
+//                                     models that can«t be clipped properly otherwise
 
 mapmodel 3  1 0 0 "comp_bridge"    //1
 mapmodel 0 7 0 0 "ladder_7x"       //2
@@ -73,7 +73,7 @@ mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
 mapmodel 1 1 0 0 "aard"            //56
 
 //fog image for this map
-fog 1024
+fog 150
 
 
 
