Makefile:added log.o/.cpp
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1944 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/src/Makefile
+++ b/ac/source/src/Makefile
@@ -6,6 +6,7 @@ PLATFORM_PREFIX=native
 CLIENT_LIBS=-L/usr/X11R6/lib -L../enet -lenet `sdl-config --libs` -lSDL_image -lSDL_mixer -lz -lGL -lGLU -lopenal -lalut -lvorbisfile
 CLIENT_OBJS= \
 	client.o \
+	log.o \
 	clientgame.o \
 	clients2c.o \
 	command.o \
@@ -49,6 +50,7 @@ CLIENT_OBJS= \
 
 SERVER_LIBS=-L../enet -lenet -lz
 SERVER_FILES= \
+	log.cpp \
 	serverms.cpp \
 	server.cpp \
 	protocol.cpp \
