"crosshairsize" added to menu (as a silder).
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1945 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -39,6 +39,7 @@ menuitem "" ""
 menuitem "Select player skin.."          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Select weapon.."        "showmenu weapons"
 menuitem "Select crosshair.."	  "showmenu Crosshairs"
+menuitemslider "Crosshair size: " 0 50 "$crosshairsize" 5 "" "crosshairsize $arg1"
 menuitem "" ""
 menuitem "QUICK setup.."                                            [ showmenu "QUICK setup" ]
 menuitem "Keyboard/mouse controls.."                                "showmenu controls"
