--- a/ac/packages/maps/ac_keller.cfg
+++ b/ac/packages/maps/ac_keller.cfg
@@ -1,8 +1,10 @@
 //ac_keller by Mr.Floppy
-//version beta02
+//version beta03
 
 fog 150
 fogcolour 0000
+watercolour 9 6 1
+scalelights 105
 
 
 mapmodelreset // start @ zero
@@ -23,7 +25,7 @@ mapmodel 2 4 0 0 "dumpster"        //10
 mapmodel 0 0 0 0 "roadblock01"     //11 use nothing mapmodels to clip
 mapmodel 0 0 0 0 "roadblock02"     //12
 mapmodel 1 8 0 0 "fence"           //13 mind the orientation of fence components (lightning)
-mapmodel 1 8 0 0 "keller-post"       //14  
+mapmodel 1 8 0 0 "fencepost"       //14  
 mapmodel 1 8 0 0 "fencegate_open"  //15
 mapmodel 1 8 0 0 "fencegate_closed"//16
 mapmodel 0 0 0 0 "grass01"         //17
