--- a/ac/packages/maps/ac_urban.cfg
+++ b/ac/packages/maps/ac_urban.cfg
@@ -1,4 +1,4 @@
-// *IMPORTANT NOTE FOR AC-MAPPERS*
+﻿// *IMPORTANT NOTE FOR AC-MAPPERS*
 // BE SURE TO COPY THIS FILE AND MAKE IT YOUR MAP CONFIG
 // BEFORE(!!) YOU EDIT ANYTHING.
 // THEN START AC, GO EDIT-MODE,GO /NEWMAP
@@ -400,7 +400,7 @@ texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/box_3.jpg"           //241
 texture 0 "./makke/smallsteelbox.jpg
 
-//------Start of 0.94 textures----------
+//------Start of v1.0 textures----------
 
 texture 0 "wotwot/urban/manhole1.jpg"
 texture 0 "wotwot/urban/grill2_s.jpg" 
