it is v1.0, not v0.94
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1966 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/source/CubeMS/web.config
+++ b/ac/source/CubeMS/web.config
@@ -9,15 +9,15 @@
 -->
 <configuration>
   <appSettings>
-    <add key="ClientAgent" value="AssaultCube Client 940"/>
-    <add key="ServerAgent" value="AssaultCube Server 940"/>
+    <add key="ClientAgent" value="AssaultCube Client 1000"/>
+    <add key="ServerAgent" value="AssaultCube Server 1000"/>
     <add key="EnableClientScripts" value="true"/>
     <add key="ServerListCacheMinutes" value="0"/>
     <add key="ClientScriptCacheMinutes" value="0"/>
   </appSettings>
   <connectionStrings>
-    <!--<add name="CubeMS" connectionString="Data Source=ADRIAN\SQLEXPRESS;Initial Catalog=k0890;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />-->
-    <add name="CubeMS" connectionString="Data Source=IMVSRV52;Initial Catalog=k0890;UserId=k0890db;Password=99ABrx77-" providerName="System.Data.SqlClient"/>
+    <add name="CubeMS" connectionString="Data Source=ADRIAN\SQLEXPRESS;Initial Catalog=k0890;Integrated Security=True;Pooling=False"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <!-- 
