allow GL extension checking from cfgs
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1973 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -114,7 +114,12 @@ alias new_gfx_quality [
                 fpsrange 30 40
                 watersubdiv 4
                 dynlight 16
-                waterreflect 1
+                if (glext "GL_ARB_fragment_program") [
+                    // make sure the 3D card is powerful enough for this
+                    waterreflect 1
+                ] [
+                    waterreflect 0
+                ]
                 dynshadow 40
                 lighterror 4
                 scorch 1
