ac_toxic = Pretty much finished. Thx makkE :)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1974 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -137,7 +137,7 @@ mapmodel 0 0 0 0 "toca/airconditioner/interior"	//107
 // mapmodel 0 0 0 0 "wires/2x8"			// Different sizes of power lines, specific to ac_power.
 // mapmodel 0 0 0 0 "wires/4x8a"		// Different sizes of power lines, specific to ac_power.
 // mapmodel 0 0 0 0 "wires/4x8"			// Different sizes of power lines, specific to ac_power.
-
+// mapmodel 1 3 0 0 "barrel-toxic"		// Toxic barrel, specific to ac_toxic.
 
 // skybox for this map - check /packages/skymaps/
 
