--- a/ac/packages/maps/ac_toxic.cfg
+++ b/ac/packages/maps/ac_toxic.cfg
@@ -16,12 +16,12 @@ mapmodelreset // start @ zero
 
 mapmodel 1 30 0 0 "nothing"		//0 @ Fences have been clipped so you can't
 					//  @ jump on top of them.
-mapmodel 4  1 0 0 "bridge"		//1 @ Adaption of new bridge AND complex bridge are in this map.
-mapmodel 0 7 0 0 "ladder_7x"		//2
-mapmodel 0 8 0 0 "ladder_8x"		//3
-mapmodel 0 10 0 0 "ladder_10x"		//4
-mapmodel 0 11 0 0 "ladder_11x"		//5
-mapmodel 0 15 0 0 "ladder_15x"		//6 
+mapmodel 4 1 0 0 "bridge"		//1 @ Adaption of new bridge AND complex bridge are in this map.
+mapmodel 0 0 0 0 "ladder_7x"		//2
+mapmodel 0 0 0 0 "ladder_8x"		//3
+mapmodel 0 0 0 0 "ladder_10x"		//4
+mapmodel 0 0 0 0 "ladder_11x"		//5
+mapmodel 0 0 0 0 "ladder_15x"		//6 
 mapmodel 0 12 0 0 "streetlamp"		//7 @ Streetlamp is now smaller in size. Makes more sense. 
 mapmodel 0 12 0 0 "streetlamp"		//8 @ It also stops people jumping on the top of them easily.
 mapmodel 3 2 0 0 "bench"		//9
@@ -76,13 +76,15 @@ mapmodel 0 0 0 0 "flyer"		//54
 mapmodel 0 0 0 0 "poster"		//55 mind z-buffer issues on 16bit!
 mapmodel 1 1 0 0 "aard"			//56 @ Clipped now, so that you go over the box, not through it.
 mapmodel 0 8 0 0 "nothing"		//57 @ Clipping of "0 8 0 0" used for fences/posts/gates.
-mapmodel 4  1 0 0 "comp_bridge"		//58sss
+mapmodel 4  1 0 0 "comp_bridge"		//58
 mapmodel 1 3 0 0 "toca/wheel"		//59
 mapmodel 2 1 0 0 "toca/tyre"		//60
 mapmodel 1 3 0 0 "toca/trashcan"	//61
 mapmodel 1 2 0 0 "toca/trashbag"	//62
 mapmodel 0 1 0 0 "toca/cinderblock"	//63
-
+mapmodel 1 3 0 0 "barrel-toxic"		//64
+mapmodel 0 7 0 0 "ladder_7x"		//65
+mapmodel 0 8 0 0 "ladder_8x"		//66
 
 
 
