Update credits; fixed ac_urban's cfg.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1976 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -92,7 +92,7 @@ menuitem "Active Developers/Contributors" ""
 menuitem "-----------------------------------" ""
 menuitem "eihrul				Coder, OpenGL expert, Enet Library, Cube2 backporting." ""
 menuitem "RandumIdiot			Mapping, documentation, tester, clean-up crew." ""
-menuitem "Flowtron			Universal team member, additional code, admin, community chief" ""
+menuitem "Flowtron			Universal team member, additional code, admin, community chief." ""
 menuitem "" ""
 menuitem "Community Mappers" ""
 menuitem "-----------------------" ""
@@ -102,6 +102,7 @@ menuitem "daMfr0				Map: ac_snow." ""
 menuitem "MitaMAN			Map: ac_depot, plus textures." ""
 menuitem "Nieb				Map: ac_desert2, plus mapmodels, 2D-art and hosting." ""
 menuitem "Archangel			Map: ac_urban." ""
+menuitem "Mr.Floppy			Map: ac_keller."
 menuitem "" ""
 menuitem "Special thanks" ""
 menuitem "----------------" ""
@@ -113,11 +114,8 @@ menuitem "absinth				Packaging AssaultCube for Mac." ""
 menuitem "dtd				Hosting." ""
 menuitem "ac_stef				Bug fixes." ""
 menuitem "Grenadier (aurhat)		Small code contributions/fixes." ""
-menuitem "" ""
-menuitem "						[ Page 2 ]"	[ showmenu "Credits (2)" ]
-
-newmenu "Credits (2)"
-
+menuitem "KanslozeClown			Code contributions and advice." ""
+menuitem "										Scroll the list to see more..." ""
 menuitem "Resources" ""
 menuitem "------------" ""
 menuitem "JCDPC						Laptop mapmodel, textures." ""
@@ -139,7 +137,6 @@ menuitem "Golgotha team, NOCTUA, Chris Zastrow, 3D Cafe, Kurt Keslar." ""
 menuitem "" ""
 menuitem "Also thanks to kurtis84, player1, quase, exis, talou and others for testing." ""
 menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Release Cup." ""
-menuitem "" ""
 
 
 // create additional menus
