--- a/ac/packages/maps/ac_urban.cfg
+++ b/ac/packages/maps/ac_urban.cfg
@@ -1,8 +1,8 @@
-﻿// *IMPORTANT NOTE FOR AC-MAPPERS*
+// *IMPORTANT NOTE FOR AC-MAPPERS*
 // BE SURE TO COPY THIS FILE AND MAKE IT YOUR MAP CONFIG
 // BEFORE(!!) YOU EDIT ANYTHING.
 // THEN START AC, GO EDIT-MODE,GO /NEWMAP
-// then SAVE YOUR MAP (AS YOURCONFIGNAME.CGZ) AND RELOAD IT!
+// THEN SAVE YOUR MAP (AS YOURCONFIGNAME.CGZ) AND RELOAD IT!
 // OTHERWISE YOU WILL USE THE START MAPS SETTINGS WHICH ARE
 // DIFFRENT SO UPON 2ND LOAD YOUR MAP
 // WOULD BE SCREWED UP...
@@ -400,7 +400,7 @@ texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/box_3.jpg"           //241
 texture 0 "./makke/smallsteelbox.jpg
 
-//------Start of v1.0 textures----------
+// ------Start of v1.0 textures----------
 
 texture 0 "wotwot/urban/manhole1.jpg"
 texture 0 "wotwot/urban/grill2_s.jpg" 
