properly disconnect before starting botmatch
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1980 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -12,12 +12,14 @@ alias startbotmatch [
 ]
 
 alias startbotmap [
-	if $connected [ disconnect ]
-	echo starting botmatch..
-    kickallbots
-	sleep 5000 startbotmatch
-	mode $tmp_mode
-	map $tmp_botmap
+	if $connected [ disconnect ] // async
+	sleep 1000 [ 
+	    echo starting botmatch..
+		mode $tmp_mode
+	    map $tmp_botmap
+    ]
+	
+	sleep 5000 [ kickallbots; startbotmatch ]
 ]
 
 newmenu singleplayer
