--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -6,9 +6,12 @@ alias tmp_mode
 alias tmp_botmap
 
 alias startbotmatch [
-	addnbot (div $tmp_numbots 2) RVSF $tmp_botskill
-	if ((> (mod $tmp_numbots 2) 0)) [ alias tmp_numbots (+ $tmp_numbots 1) ] []
-	addnbot (div $tmp_numbots 2) CLA $tmp_botskill
+	alias numrvsf (- (div $tmp_numbots 2) (curteam))
+	alias numcla (- (div $tmp_numbots 2) (= (curteam) 0))
+	
+	addnbot $numrvsf RVSF $tmp_botskill
+	//if ((> (mod $tmp_numbots 2) 0)) [ alias tmp_numbots (+ $tmp_numbots 1) ] [] 
+	addnbot $numcla CLA $tmp_botskill
 ]
 
 alias startbotmap [
