made "empty map" in single player menu disconnect before loading a map. Updated maprot.cfg
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1987 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/maprot.cfg
+++ b/ac/config/maprot.cfg
@@ -1,24 +1,26 @@
-// server side maprotations
-// WARNING: You can NOT use CubeScript in there
-// use the following scheme:
+// Server Side Maprotations...
+// WARNING: You can NOT use CubeScript in here!!
+
+// Use the following scheme...
 // map:mode:time:allowVote
 
 // tdm
-ac_complex:0:15:1
-ac_depot:0:15:1
-ac_desert:0:15:1
-ac_mines:0:15:1
+ac_urban:0:15:1
+ac_keller:0:15:1
 
 // ctf
 ac_mines:5:15:1
 ac_depot:5:15:1
+ac_power:5:15:1
+ac_elevation:5:15:1
 
 // dm
-ac_desert:2:10:1
+ac_toxic:2:10:1
 ac_complex:2:10:1
+ac_snow:2:10:1
 
 // osok
 ac_desert2:10:10:1
-ac_complex:10:10:1
+ac_desert:10:10:1
 
-// add more..
+// Change this file to make the map rotation different and add more..
