--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -25,13 +25,19 @@ alias startbotmap [
 	sleep 5000 [ kickallbots; startbotmatch ]
 ]
 
+
+alias emptymap [ if $connected [ disconnect; sleep 1000 [ emptymapconnected ] ] [ emptymapconnected ] ]
+alias emptymapconnected [
+	mode 0
+	showmenu maps ]
+
 newmenu singleplayer
 
-// teamplay note mature yet
+// teamplay not mature yet
 menuitem "Bot Team Deathmatch"				"alias tmp_mode 7; showmenu botskill"
 menuitem "Bot Deathmatch"					"alias tmp_mode 8; showmenu botskill"
 menuitem "Bot One Shot, One Kill"           "alias tmp_mode 12; showmenu botskill"
-menuitem "Empty Map"                        "mode 0; showmenu maps"
+menuitem "Empty Map"                        "emptymap"
 
 newmenu botskill
 
@@ -78,7 +84,7 @@ alias genbotmaps [
 	]
 ]
 
-genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic ac_urban"
+genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic ac_urban ac_keller"
 
 
 newmenu "Creating bot waypoints"
