--- a/ac/packages/maps/ac_shine.cfg
+++ b/ac/packages/maps/ac_shine.cfg
@@ -12,14 +12,14 @@ mapmodelreset // start @ zero
 mapmodel 0 0 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
 //                                     models that can´t be clipped properly otherwise
 
-mapmodel 3  1 0 0 "comp_bridge"    //1
-mapmodel 0 7 0 0 "ladder_7x"       //2
+mapmodel 4 1 0 0 "comp_bridge"    //1
+mapmodel 0 7 0 0 "ladder_7x"   	    //2
 mapmodel 0 8 0 0 "ladder_8x"       //3
 mapmodel 0 10 0 0 "ladder_10x"     //4
 mapmodel 0 11 0 0 "ladder_11x"     //5
 mapmodel 0 15 0 0 "ladder_15x"     //6 
-mapmodel 1 12 0 0 "streetlamp"     //7
-mapmodel 1 12 0 0 "streetlamp"     //8
+mapmodel 0 12 0 0 "streetlamp"     //7
+mapmodel 0 12 0 0 "streetlamp"     //8
 mapmodel 3  2 0 0 "bench"          //9
 mapmodel 2 4 0 0 "dumpster"        //10
 mapmodel 0 0 0 0 "roadblock01"     //11 use nothing mapmodels to clip
@@ -70,7 +70,7 @@ mapmodel 0 0 0 0 "hook"            //52
 mapmodel 0 0 0 0 "coffeemug"       //53
 mapmodel 0 0 0 0 "flyer"           //54
 mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
-mapmodel 0 0 0 0 "aard"            //56
+mapmodel 1 1 0 0 "aard"            //56
 
 
 
@@ -84,9 +84,9 @@ mapmodel 3 7 0 0 "toca/radarconsole"		//58
 mapmodel 1 7 0 0 "toca/commrack"		//59
 mapmodel 1 3 0 0 "toca/commrack2"		//60
 mapmodel 1 0 0 0 "toca/powermeter"		//61
-mapmodel 8 1 0 0 "toca/platform16"		//62
-mapmodel 1 3 0 0 "toca/steeldrum"		//63
-mapmodel 1 2 0 0 "toca/steeldrum2"		//64
+mapmodel 0 0 0 0 "nothing"			//62
+mapmodel 0 0 0 0 "nothing"			//63
+mapmodel 0 0 0 0 "nothing"			//64
 mapmodel 1 2 0 0 "toca/trashbag"		//65
 mapmodel 1 2 0 0 "toca/computer/pc"		//66
 mapmodel 1 2 0 0 "toca/computer/monkeymou"	//67
@@ -96,20 +96,20 @@ mapmodel 1 2 0 0 "toca/tv"			//70
 mapmodel 1 1 0 0 "toca/securitycam/vertmount"	//71
 mapmodel 1 1 0 0 "toca/securitycam/wallmount"	//72
 mapmodel 1 1 0 0 "toca/securitycam/secucam"	//73
-mapmodel 4 1 0 0 "toca/platform8"		//74
-mapmodel 1 8 0 0 "toca/wall"			//75
+mapmodel 4 1 0 0 "bridge"		//74 - Check this...
+mapmodel 0 0 0 0 "nothing"			//75
 mapmodel 0 0 0 0 "toca/guardrail"		//76
 mapmodel 1 3 0 0 "nothing"			//77 guardrail clipping
 mapmodel 1 4 0 0 "toca/guardrail2"		//78
 mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	//79
-mapmodel 2 1 0 0 "toca/tire"			//80
+mapmodel 2 1 0 0 "toca/tyre"			//80
 mapmodel 1 3 0 0 "toca/wheel"			//81
 mapmodel 3 3 0 0 "toca/utilitytable"		//82
 mapmodel 1 1 0 0 "toca/milkcarton"		//83
 mapmodel 0 0 0 0 "toca/bullet"			//84
 mapmodel 0 0 0 0 "toca/sgshell"			//85
 mapmodel 1 4 0 0 "nothing"			//86 guardrail2 clipping
-mapmodel 1 20 0 0 "toca/electricpole"		//87
+mapmodel 0 0 0 0 "nothing"			//87
 mapmodel 1 3 0 0 "toca/trashcan"		//88 
 mapmodel 1 5 0 0 "toca/signs/target"		//89
 mapmodel 0 0 0 0 "toca/signs/toxic"		//90
@@ -126,7 +126,7 @@ mapmodel 0 0 0 0 "toca/signs/explosives"	//100
 mapmodel 4 1 0 0 "toca/platformmet"		//101
 mapmodel 4 1 7 0 "toca/stairs1"			//102
 mapmodel 4 1 7 0 "toca/stairs2"			//103
-mapmodel 2 1 0 0 "nothing"			//104 stairs clipping
+mapmodel 0 0 0 0 "nothing"			//104 stairs clipping
 mapmodel 1 1 0 0 "toca/cinderblock"		//105
 mapmodel 1 8 0 0 "toca/corrugated/fence1"	//106
 mapmodel 1 8 0 0 "toca/corrugated/fence2"	//107
@@ -134,7 +134,6 @@ mapmodel 1 8 0 0 "toca/corrugated/beam"		//108
 mapmodel 2 6 0 0 "toca/rack"			//109
 mapmodel 2 2 0 0 "toca/airconditioner"		//110
 mapmodel 2 2 0 0 "toca/airconditioner/interior"	//111
-mapmodel 1 1 0 0 "toca/ceillingfan"		//112
 
 
 
@@ -446,12 +445,12 @@ texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/box_3.jpg"           //241
 
-texture 0 "./toca/concreto1.jpg"	//242
-texture 0 "./toca/doors1.jpg"
-texture 0 "./toca/doors2.jpg"
-texture 0 "./toca/rubble1.jpg"
-texture 0 "./toca/garagedoor1.jpg"
-texture 0 "./toca/wall1.jpg"
+texture 0 "./dog/texture08.jpg"	//242
+texture 0 "./dog/texture08.jpg"
+texture 0 "./dog/texture08.jpg"
+texture 0 "./dog/texture08.jpg"
+texture 0 "./dog/texture08.jpg"
+texture 0 "./dog/texture08.jpg"
 
 texture 0 "./dog/texture08.jpg"
 texture 0 "./dog/texture09.jpg"
