ac_shine ---> Menus
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1991 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -26,8 +26,8 @@ alias startbotmap [
 ]
 
 
-alias emptymap [ if $connected [ disconnect; sleep 1000 [ emptymapconnected ] ] [ emptymapconnected ] ]
-alias emptymapconnected [
+alias emptymap [ if $connected [ disconnect; sleep 1000 [ emptymap2 ] ] [ emptymap2 ] ]
+alias emptymap2 [
 	mode 0
 	showmenu maps ]
 
@@ -84,7 +84,7 @@ alias genbotmaps [
 	]
 ]
 
-genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic ac_urban ac_keller"
+genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic ac_urban ac_keller ac_shine"
 
 
 newmenu "Creating bot waypoints"
