--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -18,7 +18,7 @@ alias grenades [ weapon 6 ]
 //for alternative weapon binding (more economic) see the end of this file
 
 lighterror 4 //set higher (for example 8) if you experience slowdown
-minframerate 5
+minframetime 5
 
 alias altaction [
 	(concatword altaction_ (curweapon))
