The 3rd ac_desert.... ;) heh.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1995 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -84,7 +84,7 @@ alias genbotmaps [
 	]
 ]
 
-genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic ac_urban ac_keller ac_shine"
+genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic ac_urban ac_keller ac_shine ac_desert3"
 
 
 newmenu "Creating bot waypoints"
