--- a/ac/packages/maps/ac_desert3.cfg
+++ b/ac/packages/maps/ac_desert3.cfg
@@ -67,9 +67,7 @@ mapmodel 0  0 0 0 "aard"            //56
 mapmodel 0  0 0 0 "sail"           //57
 mapmodel 0  0 0 0 "signs/arab"     //58 
 mapmodel 1 3 0 0 "toca/trashcan"   //59
-mapmodel 1 4 0 0 "toca/guardrail"		//60
-mapmodel 1 4 0 0 "toca/guardrail2"		//61
-mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	//62
+mapmodel 0 1 0 0 "ladder_rung"
 
 texturereset
 
