map lists alphabetised.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2001 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -26,7 +26,7 @@ alias genmapitems [
 
 newmenu maps
 
-genmapitems	"ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic ac_urban ac_keller ac_shine ac_desert3"
+genmapitems	"ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_snow ac_toxic ac_urban"
 menuitem	""""
 menuitem	"Show all maps..." [ showmenu "all maps" ]
 
@@ -35,7 +35,7 @@ menudirlist "packages/maps" "cgz" "map $arg1"
 
 newmenu maps_ctf 
 
-genmapitems "ac_mines ac_depot ac_power ac_elevation ac_urban ac_keller ac_shine ac_desert3"
+genmapitems "ac_depot ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_urban"
 menuitem """"
 menuitem "Show all maps.." [showmenu "all maps"]
 
