--- a/ac/config/securemaps.cfg
+++ b/ac/config/securemaps.cfg
@@ -1,13 +1,14 @@
 clearsecuremaps
 securemap ac_complex
+securemap ac_depot
 securemap ac_desert
 securemap ac_desert2
-securemap ac_depot
+securemap ac_desert3
+securemap ac_elevation
+securemap ac_keller
+securemap ac_mines
+securemap ac_power
+securemap ac_shine
 securemap ac_snow
 securemap ac_toxic
-securemap ac_elevation
-securemap ac_power
 securemap ac_urban
-securemap ac_keller
-securemap ac_shine
-securemap ac_desert3
