--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -84,8 +84,7 @@ alias genbotmaps [
 	]
 ]
 
-genbotmaps "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic ac_urban ac_keller ac_shine ac_desert3"
-
+genbotmaps "ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_snow ac_toxic ac_urban"
 
 newmenu "Creating bot waypoints"
 
