sound & firstrun settings
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2008 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -8,7 +8,7 @@ loadcrosshair default.png	// choose another crosshair, see packages/misc/crossha
 skin 0			   // change your look
 autoreload 1	   // reload the guns automatically
 
-alias maxmusicvol 120 // set higher if you want (max 255)
+musicvol 128
 
 alias primary [ weapon (currentprimary) ]
 alias secondary [ weapon 1 ]
@@ -111,13 +111,9 @@ alias delta_spect_0 [ followplayer $arg1 ]
 alias timeremain [ echo time remaining: ($minutesremaining) ]
 alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
 
-music ac.ogg
-musicvol 0
+
 
 alias start_intermission [
-    // play once (1:40) 
-    musicvol $maxmusicvol
-    fade 0
-    sleep 10000 [ fade 1 ]
+    // say "gg"
 ]
 
