--- a/ac/config/firstrun.cfg
+++ b/ac/config/firstrun.cfg
@@ -1,9 +1,8 @@
 sleep 100 welcome
 
 alias welcome [
-    musicvol $maxmusicvol
-    fade 0
-    music "pingpong/03-pp-kamikadze.ogg"
-    sleep 60000 fade 1
-    showmenu "QUICK setup"
+    sleep 500 [ 
+        music "pingpong/03-pp-kamikadze.ogg" (* 89 1000) " " // 90 secs, fade
+        showmenu "QUICK setup"
+    ]
 ]
