--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -1,3 +1,4 @@
+// game sounds
 registersound "player/jump"         //S_JUMP
 registersound "player/step" 300       // S_SOFTLAND
 registersound "player/land" 200      // S_HARDLAND
@@ -50,6 +51,8 @@ registersound "player/crouch" 100 1    // S_FOOTSTEPSCROUCH
 registersound "misc/menu_click1"        // S_MENUSELECT
 registersound "misc/menu_click2"        // S_MENUENTER
 
+
+// ingame voice chat
 registersound "voicecom/affirmative"
 registersound "voicecom/allrightsir"
 registersound "voicecom/comeonmove"
@@ -76,13 +79,7 @@ registersound "voicecom/wedidit"
 registersound "voicecom/yes"
 registersound "voicecom/niceshot"
 
-alias fade [ // 0=in, 1=out
-    alias stepsize 5
-    alias numsteps (div $maxmusicvol $stepsize)
-    loop i (+ $numsteps 1) [
-        alias curvol (* $i $stepsize)
-        if (= $arg1 1) [ alias curvol (- $maxmusicvol $curvol) ]
-        sleep (* $i 100) (concat musicvol $curvol)
-    ]
-]
-
+// music
+registermusic "pingpong/03-pp-kamikadze"    // M_FLAGGRAB
+registermusic "pingpong/08-pp-headshot"     // M_LASTMINUTE1
+registermusic "ac"                          // M_LASTMINUTE2
