underwater sound cfg
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2012 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -50,6 +50,7 @@ registersound "player/footsteps" 100 1 // S_FOOTSTEPS
 registersound "player/crouch" 100 1    // S_FOOTSTEPSCROUCH
 registersound "misc/menu_click1"        // S_MENUSELECT
 registersound "misc/menu_click2"        // S_MENUENTER
+registersound "player/underwater"       // S_UNDERWATER
 
 
 // ingame voice chat
