--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -33,6 +33,7 @@ menuitem "Police"           "skin 5" "chmenumdl RVSF playermodels/RVSF/06 all 50
 
 newmenu settings
 
+menuinit [alias newteam (curteam)]
 menuitemtextinput "Nickname:" "result $curname" "name $arg1"
 menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" "alias newteam $arg1"
 menuitem "" ""
