fixed bot count menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2034 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -6,12 +6,15 @@ alias tmp_mode
 alias tmp_botmap
 
 alias startbotmatch [
-	alias numrvsf (- (div $tmp_numbots 2) (curteam))
-	alias numcla (- (div $tmp_numbots 2) (= (curteam) 0))
-	
-	addnbot $numrvsf RVSF $tmp_botskill
-	//if ((> (mod $tmp_numbots 2) 0)) [ alias tmp_numbots (+ $tmp_numbots 1) ] [] 
-	addnbot $numcla CLA $tmp_botskill
+
+	if (= $tmp_mode 7) [ // TDM
+	    alias numrvsf (- (div $tmp_numbots 2) (curteam))
+	    alias numcla (- (div $tmp_numbots 2) (= (curteam) 0))
+        addnbot $numrvsf RVSF $tmp_botskill
+	    addnbot $numcla CLA $tmp_botskill
+	] [ // DM
+	    addnbot $tmp_numbots
+	]
 ]
 
 alias startbotmap [
