Mwahahaha.. you can't stop me :P ... j/k.. going to bed now :P gn naider, driAn, etc
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2035 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/maprot.cfg
+++ b/ac/config/maprot.cfg
@@ -7,12 +7,14 @@
 // tdm
 ac_urban:0:15:1
 ac_keller:0:15:1
+ac_shine:0:15:1
 
 // ctf
 ac_mines:5:15:1
 ac_depot:5:15:1
 ac_power:5:15:1
 ac_elevation:5:15:1
+ac_desert3:5:15:1
 
 // dm
 ac_toxic:2:10:1
