--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -100,9 +100,10 @@ menuitem "Shadow			Map: ac_elevation." ""
 menuitem "Wotwot				Map: ac_power, plus textures." ""
 menuitem "daMfr0				Map: ac_snow." ""
 menuitem "MitaMAN			Map: ac_depot, plus textures." ""
-menuitem "Nieb				Map: ac_desert2, plus mapmodels, 2D-art and hosting." ""
+menuitem "Nieb				Map: ac_desert2, ac_desert3, plus mapmodels, 2D-art and hosting." ""
 menuitem "Archangel			Map: ac_urban." ""
 menuitem "Mr.Floppy			Map: ac_keller."
+menuitem "DogDancing			Map: ac_shine."
 menuitem "" ""
 menuitem "Special thanks" ""
 menuitem "----------------" ""
