--- a/ac/source/vcpp/cube.vcproj
+++ b/ac/source/vcpp/cube.vcproj
@@ -48,7 +48,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
-				AdditionalIncludeDirectories="..\include\al;..\enet\include;..\include;..\src"
+				AdditionalIncludeDirectories="..\include\vorbis;..\include\ogg;..\enet\include;..\include;..\src;..\include\al;..\include"
 				PreprocessorDefinitions="WIN32,NDEBUG,_CONSOLE"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -84,7 +84,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="ogg.lib vorbis.lib vorbisfile.lib vorbisenc.lib alut.lib openal32.lib efx-util.lib odbc32.lib odbccp32.lib zdll.lib opengl32.lib glu32.lib msvcrt.lib SDLmain.lib SDL.lib SDL_image.lib ws2_32.lib winmm.lib"
+				AdditionalDependencies="ogg.lib libvorbisfile.lib openal32.lib efx-util.lib odbc32.lib odbccp32.lib zdll.lib opengl32.lib glu32.lib msvcrt.lib SDLmain.lib SDL.lib SDL_image.lib ws2_32.lib winmm.lib"
 				OutputFile="../../bin_win32/ac_client.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -157,7 +157,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/GS"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\include\al\vorbis;..\include\al\ogg;..\enet\include;..\include;..\src;..\include\al"
+				AdditionalIncludeDirectories="..\include\vorbis;..\include\ogg;..\enet\include;..\include;..\src;..\include\al;..\include"
 				PreprocessorDefinitions="WIN32,_DEBUG,_CONSOLE,ENET_DEBUG"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -188,7 +188,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="ogg.lib vorbis.lib vorbisfile.lib vorbisenc.lib alut.lib openal32.lib efx-util.lib odbc32.lib odbccp32.lib zdll.lib opengl32.lib glu32.lib msvcrt.lib SDLmain.lib SDL.lib SDL_image.lib ws2_32.lib winmm.lib"
+				AdditionalDependencies="ogg.lib libvorbisfile.lib openal32.lib efx-util.lib odbc32.lib odbccp32.lib zdll.lib opengl32.lib glu32.lib msvcrt.lib SDLmain.lib SDL.lib SDL_image.lib ws2_32.lib winmm.lib"
 				OutputFile="../../bin_win32/ac_client.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -260,7 +260,7 @@
 				EnableIntrinsicFunctions="false"
 				FavorSizeOrSpeed="2"
 				OmitFramePointers="true"
-				AdditionalIncludeDirectories="..\enet\include;..\include"
+				AdditionalIncludeDirectories="..\include\vorbis;..\include\ogg;..\enet\include;..\include;..\src;..\include\al;..\include"
 				PreprocessorDefinitions="WIN32,NDEBUG,_CONSOLE,USE_ENET"
 				StringPooling="true"
 				MinimalRebuild="true"
@@ -368,13 +368,13 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
-				AdditionalIncludeDirectories="..\enet\include;..\include"
+				AdditionalIncludeDirectories="..\include\vorbis;..\include\ogg;..\enet\include;..\include;..\src;..\include\al;..\include"
 				PreprocessorDefinitions="WIN32,NDEBUG,_CONSOLE,STANDALONE"
 				StringPooling="true"
 				MinimalRebuild="false"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
-				BufferSecurityCheck="false"
+				BufferSecurityCheck="true"
 				EnableFunctionLevelLinking="false"
 				DisableLanguageExtensions="false"
 				ForceConformanceInForLoopScope="true"
@@ -471,7 +471,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\enet\include;..\include"
+				AdditionalIncludeDirectories="..\include\vorbis;..\include\ogg;..\enet\include;..\include;..\src;..\include\al;..\include"
 				PreprocessorDefinitions="WIN32,_DEBUG,_CONSOLE,ENET_DEBUG,STANDALONE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -628,6 +628,10 @@
 			</File>
 			<File
 				RelativePath="..\src\servercontroller.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\serverevents.h"
 				>
 			</File>
 			<File
@@ -1713,6 +1717,10 @@
 						Name="VCCLCompilerTool"
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\src\log.cpp"
+				>
 			</File>
 			<File
 				RelativePath="..\src\main.cpp"
