--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -39,6 +39,8 @@ registersound "ctf/flagreturn"      //S_FLAGRETURN
 registersound "ctf/flagscore"       //S_FLAGSCORE
 registersound "weapon/grenade_pull" // S_GRENADEPULL
 registersound "weapon/grenade_throw" // S_GRENADETHROW
+registersound "weapon/grenade_bounce1" // S_GRENADEBOUNCE1
+registersound "weapon/grenade_bounce2" // S_GRENADEBOUNCE2
 registersound "weapon/pistol_akreload" // S_RAKIMBO
 registersound "misc/change_gun"		// S_GUNCHANGE
 registersound "player/gib"			// S_GIB
