final version of ac_keller
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@2080 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_keller.cfg
+++ b/ac/packages/maps/ac_keller.cfg
@@ -1,5 +1,4 @@
 //ac_keller by Mr.Floppy
-//version beta03
 
 fog 150
 fogcolour 0000
@@ -11,20 +10,20 @@ mapmodelreset // start @ zero
 mapmodel 0 0 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
 //                                     models that can´t be clipped properly otherwise
 
-mapmodel 4 1 0 0 "comp_bridge"     //1
+mapmodel 4  1 0 0 "comp_bridge"    //1
 mapmodel 0 7 0 0 "ladder_7x"       //2
 mapmodel 0 8 0 0 "ladder_8x"       //3
 mapmodel 0 10 0 0 "ladder_10x"     //4
 mapmodel 0 11 0 0 "ladder_11x"     //5
 mapmodel 0 15 0 0 "ladder_15x"     //6 
-mapmodel 0 12 0 0 "streetlamp"     //7
-mapmodel 0 12 0 0 "streetlamp"     //8
+mapmodel 1 12 0 0 "streetlamp"     //7
+mapmodel 1 12 0 0 "streetlamp"     //8
 mapmodel 3  2 0 0 "bench"          //9
 mapmodel 2 4 0 0 "dumpster"        //10
 mapmodel 0 0 0 0 "roadblock01"     //11 use nothing mapmodels to clip
 mapmodel 0 0 0 0 "roadblock02"     //12
 mapmodel 1 8 0 0 "fence"           //13 mind the orientation of fence components (lightning)
-mapmodel 1 8 0 0 "keller-post"     //14  
+mapmodel 1 8 0 0 "keller-post"       //14  
 mapmodel 1 8 0 0 "fencegate_open"  //15
 mapmodel 1 8 0 0 "fencegate_closed"//16
 mapmodel 0 0 0 0 "grass01"         //17
@@ -70,6 +69,7 @@ mapmodel 0 0 0 0 "coffeemug"       //53
 mapmodel 0 0 0 0 "flyer"           //54
 mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
 mapmodel 0 0 0 0 "aard"            //56
+mapmodel 0 0 0 0 "drainpipe"       //57
 
 // skybox for this map - check /packages/skymaps/
 
@@ -99,16 +99,21 @@ texture 0 "./noctua/water/water01.jpg"
 //texture 0 "./makke/muddywater.jpg"
 //texture 0 "./noctua/water/snow01.jpg"
 
+//misterfloppy
+
+texture 0 "./misterfloppy/keller/exit_sign.jpg"
+texture 0 "./misterfloppy/keller/gully.jpg"
+texture 0 "./misterfloppy/keller/door_panel.jpg"
+texture 0 "./misterfloppy/keller/aircon.jpg"
+texture 0 "./misterfloppy/keller/light.jpg"
+texture 0 "./misterfloppy/keller/door_01.jpg"
+texture 0 "./misterfloppy/keller/door_02.jpg"
+texture 0 "./misterfloppy/keller/door_03.jpg"
+
+
+
 //-----brickwalls-------
 
-texture 0 "./arcitool/archibrick01.jpg"
-texture 0 "./arcitool/archibrick02.jpg"
-texture 0 "./arcitool/archibrick03.jpg"
-texture 0 "./arcitool/archibrick04.jpg"
-texture 0 "./arcitool/archibrick05.jpg"
-texture 0 "./arcitool/archibrick06.jpg"
-texture 0 "./arcitool/archibrick07.jpg"
-texture 0 "./arcitool/rohbaubims.jpg"
 texture 0 "./mitaman/grsites/brick051.jpg"
 texture 0 "./mitaman/grsites/brick065.jpg"
 texture 0 "./boeck/stone_022.jpg"
@@ -379,3 +384,16 @@ texture 0 "./zastrow/wood_crate_12.jpg"
 texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/box_3.jpg"           //241
+
+//wotwots urban textures
+
+texture 0 "wotwot/urban/electric4.jpg"  
+texture 0 "wotwot/urban/electric4_plain.jpg"
+texture 0 "wotwot/urban/door3.jpg"  
+texture 0 "wotwot/urban/electric3.jpg"  
+texture 0 "wotwot/urban/electric3_plain.jpg"
+texture 0 "wotwot/urban/electric1.jpg"  
+texture 0 "wotwot/urban/electric1_plain.jpg"
+texture 0 "wotwot/urban/cableshelf1_s_hor.jpg"
+texture 0 "wotwot/urban/cableshelf1_s_ver.jpg"
+
